# OOP_MAI

./: CMakeLists.txt  README.md  function.cpp  function.hpp  main.cpp  tests.cpp
Lab1/: README.md  main.cpp  tests.cpp
Lab2/: CMakeLists.txt  README.md  binary.cpp  binary.hpp  main.cpp  tests.cpp
Lab3/: CMakeLists.txt  figure.cpp  figure.hpp  main.cpp  point.cpp  point.hpp  test.cpp  vector.cpp  vector.hpp
Lab3/hexagon/: hexagon.cpp  hexagon.hpp
Lab3/pentagon/: pentagon.cpp  pentagon.hpp
Lab3/rhomb/: rhomb.cpp  rhomb.hpp
Lab4/: CMakeLists.txt  main.cpp  test.cpp
Lab4/include/: figure.hpp  hexagon.hpp  pentagon.hpp  point.hpp  rhomb.hpp  vector.hpp
Lab5/: CMakeLists.txt  main.cpp  tests.cpp
Lab5/include/: allocator.hpp  list.hpp
Lab6/: CMakeLists.txt  README.md  tests.cpp
Lab7/: CMakeLists.txt  README.md  tests.cpp
